# Streamlit_judo

./: README.md  app.py  judo_app.db  pyproject.toml
streamlit_judo_app/: pyproject.toml
