[tool.poetry]
name = "streamlit-judo"
version = "0.1.0"
description = ""
authors = ["gabriel almeida"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
watchdog = "^3.0.0"
streamlit-js-eval = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
